# ovis-engine

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  Dockerfile  README.md  config.ld  generate_tests_from_ldoc.py
application/: CMakeLists.txt
application/src/: application.cpp  canvas_viewport.cpp  game_settings.cpp  sdl_window.cpp  tick_receiver.cpp  window.cpp
audio/: CMakeLists.txt  audio_context.hpp
core/: CMakeLists.txt
core/assets/: Transform.schema.json  Type.schema.json  Vector3.schema.json
core/benchmark/: bench_scripting.cpp
core/schemas/: Core.Color.schema.json  Core.Entity.schema.json  Core.Function.schema.json  Core.SceneObjectAnimation.schema.json  Core.SceneObjectAnimationChannel.schema.json  Core.SceneObjectAnimationKeyframe.schema.json  Core.Transform.schema.json  Core.Type.schema.json  SceneObject.schema.json  Transform.schema.json  Type.schema.json  color.schema.json  entity.schema.json  quaternion.schema.json  scene.schema.json  transform.schema.json  vector2.schema.json  vector3.schema.json
core/src/: animator.cpp  animator_controller.cpp  application.cpp  asset_library.cpp  camera.cpp  color.cpp  color_type.cpp  component_storage.cpp  core_module.cpp  entity.cpp  event.cpp  event_storage.cpp  execution_context.cpp  function.cpp  job.cpp  json_schema.cpp  lua.cpp  main_vm.cpp  math.cpp  module.cpp  quaternion_type.cpp  resource.cpp  scene.cpp  scene_controller.cpp  scene_object.cpp  scene_object_animation.cpp  scene_object_component.cpp  scene_viewport.cpp  scheduler.cpp  script_function.cpp  script_parser.cpp  script_scene_controller.cpp  transform.cpp  type.cpp  value.cpp  value_storage.cpp  vector2.cpp  vector3.cpp  virtual_machine.cpp  visual_script_scene_controller.cpp  (+1 more)
core/test/: test.cpp  test_animations.cpp  test_events.cpp  test_intersection.cpp  test_math.cpp  test_module.cpp  test_scene.cpp  test_scene_object.cpp  test_script_function_parser.cpp  test_script_type_parsing.cpp  test_scripting.cpp  test_simple_job.cpp  test_simple_scene_controller.cpp  test_type.cpp  test_utils.hpp  test_value.cpp  virtual_machine.cpp
editor/: CMakeLists.txt  action_history.cpp  action_history.hpp  clipboard.cpp  clipboard.hpp  editor_asset_library.cpp  editor_asset_library.hpp  editor_module.cpp  editor_module.hpp  editor_viewport.cpp  editor_viewport.hpp  editor_window.cpp  editor_window.hpp  editor_window_controller.cpp  editor_window_controller.hpp  global.cpp  global.hpp  index.html  index.ts  loading_controller.cpp  loading_controller.hpp  main.cpp
editor/assets/: icon-eye.texture2d.0  icon-move.texture2d.0  icon-package.texture2d.0  icon-pause.texture2d.0  icon-pause.texture2d.json  icon-play.texture2d.0  icon-play.texture2d.json  icon-redo.texture2d.0  icon-redo.texture2d.json  icon-rotate.texture2d.0  icon-save.texture2d.0  icon-save.texture2d.json  icon-scale.texture2d.0  icon-stop.texture2d.0  icon-undo.texture2d.0  icon-windows.texture2d.0  line.shader.vert
editor/imgui_extensions/: auto_complete_input.cpp  auto_complete_input.hpp  input_asset.cpp  input_asset.hpp  input_json.cpp  input_json.hpp  input_math.cpp  input_math.hpp  input_serializable.cpp  input_serializable.hpp  splitter.cpp  splitter.hpp  texture_button.hpp
editor/src/: asset_provider.cpp  camera_controller.cpp  editor_viewport.cpp  main.cpp  object_selection_controller.cpp  scripting.cpp  transformation_tools_controller.cpp  viewport_controller.cpp
editor/windows/: asset_viewer_window.cpp  asset_viewer_window.hpp  dockspace_window.cpp  dockspace_window.hpp  inspector_window.cpp  inspector_window.hpp  log_window.cpp  log_window.hpp  profiling_window.cpp  profiling_window.hpp  toast_window.cpp  toast_window.hpp  toolbar.cpp  toolbar.hpp  ui_window.cpp  ui_window.hpp
editor_viewport/: CMakeLists.txt
editor_viewport/src/: camera_controller.cpp  editor_viewport.cpp  main.cpp  object_selection_controller.cpp  transformation_tools_controller.cpp  viewport_controller.cpp
emscripten/: CMakeLists.txt
emscripten/src/: canvas.cpp  key_codes.cpp
engine/application/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/engine/: CMakeLists.txt
engine/graphics/: CMakeLists.txt
engine/imgui/: CMakeLists.txt  base_module.cpp  imgui_render_pass.hpp
engine/input/: CMakeLists.txt
engine/math/: CMakeLists.txt
engine/networking/: CMakeLists.txt
engine/physics2d/: CMakeLists.txt
engine/rendering/: CMakeLists.txt
engine/rendering2d/: CMakeLists.txt
engine/scene/: CMakeLists.txt
engine/utils/: CMakeLists.txt
input/: CMakeLists.txt
input/src/: input_event_emitter.cpp  key.cpp  key_events.cpp  key_release_event.cpp  mouse_button.cpp  mouse_events.cpp  text_input_event.cpp
player/: CMakeLists.txt
player/src/: loading_controller.cpp  main.cpp
rendering/: CMakeLists.txt
rendering/assets/: primitive_rendering.shader.frag  primitive_rendering.shader.vert
rendering/src/: clear_pass.cpp  primitive_renderer.cpp  render_pass.cpp  rendering_viewport.cpp
rendering/test/: test_clear_pass.cpp
rendering2d/: CMakeLists.txt
rendering2d/assets/: shape2d.shader.frag  shape2d.shader.vert
rendering2d/schemas/: Rendering2D.Text.schema.json
rendering2d/src/: font_atlas.cpp  renderer2d.cpp  rendering2d_module.cpp  shape2d.cpp  text.cpp
rendering2d/test/: test.cpp  test_renderer2d.cpp  test_shape2d.cpp
script_compiler/: CMakeLists.txt
script_compiler/src/: main.cpp
sdl/: CMakeLists.txt
sdl/src/: sdl_event_processor.cpp  sdl_init_subsystem.cpp  sdl_window.cpp  system.cpp
sdl/test/: test_system.cpp  test_window.cpp
utils/: CMakeLists.txt  README.md
utils/src/: all.cpp  file.cpp  log.cpp  memory.cpp  native_type_id.cpp  not_null.cpp  parameter_pack.cpp  profiling.cpp  reflection.cpp  result.cpp  type_id.cpp  utils_module.cpp  versioned_index.cpp
utils/test/: sparse_vector.cpp  string.cpp
vm/: CMakeLists.txt
vm/assets/: Quaternion.schema.json  SceneObject.schema.json  Type.schema.json  core.script_documentation.en-US.json
vm/schemas/: Core.FunctionReference.schema.json  Core.Module.schema.json  (+38 more)
(+741 files in other folders)
